--- a/json/price_cal.html
+++ b/json/price_cal.html
@@ -161,16 +161,16 @@
           <input id="input_delivery_count" type="text" class="form-control" placeholder="택배비 개당" aria-label="택배비 개당" aria-describedby="basic-addon1" value="0"/>
         </div>
         <div class="col">
-          <input id="input_profit" type="text" class="form-control" placeholder="이윤" aria-label="이윤" aria-describedby="basic-addon1" value="2000"/>
+          <input id="input_profit" type="text" class="form-control" placeholder="이윤" aria-label="이윤" aria-describedby="basic-addon1" value="1000"/>
         </div>
         <!-- <div class="col">
           <input id="input_price" type="text" class="form-control" placeholder="판매가" aria-label="판매가" aria-describedby="basic-addon1"/>
         </div> -->
         <div class="col">
-          <input id="input_count_start" type="text" class="form-control" placeholder="시작 갯수" aria-label="시작 갯수" aria-describedby="basic-addon1"/>
+          <input id="input_count_start" type="text" class="form-control" placeholder="시작 갯수" aria-label="시작 갯수" aria-describedby="basic-addon1" value="1"/>
         </div>
         <div class="col">
-          <input id="input_count_end" type="text" class="form-control" placeholder="마지막 갯수" aria-label="마지막 갯수" aria-describedby="basic-addon1"/>
+          <input id="input_count_end" type="text" class="form-control" placeholder="마지막 갯수" aria-label="마지막 갯수" aria-describedby="basic-addon1" value="110"/>
         </div>
         <div class="col">
           <div onclick="onClickConfirm();" class="btn btn-outline-secondary">확인</div>
