--- a/json/price_cal.html
+++ b/json/price_cal.html
@@ -213,6 +213,7 @@
                 rowHtml += "<th scope='col'>이윤</th>";
                 rowHtml += "<th scope='col'>갯수</th>";
                 rowHtml += "<th scope='col'>판매가</th>";
+                rowHtml += "<th scope='col'>목표가</th>";
                 rowHtml += "</tr>";
                 rowHtml += "</thead>";
                 rowHtml += "<tbody>";
@@ -268,9 +269,21 @@
 
         valPrice = Math.floor(valPrice);
 
+
+        var targetPrice = valPrice + 5000;
+
+
+
         var strValPrice = valPrice.toString();
 
         valPrice = parseInt((strValPrice.substring(0, strValPrice.length - 1)) + "0");
+
+
+
+
+        var strTargetPrice = targetPrice.toString();
+
+        var targetPriceReal = parseInt((strTargetPrice.substring(0, strTargetPrice.length - 1)) + "0");
 
 
         //((최저가 * 갯수) + 택배비 + 이윤) * 수수료
@@ -284,6 +297,7 @@
             rowHtml += "<td>"+valProfit.toLocaleString()+"</td>";
             rowHtml += "<td>"+valCount+"</td>";
             rowHtml += "<td onclick='onClickPriceClipboard("+valPrice+")'>"+valPrice.toLocaleString()+"</td>";
+            rowHtml += "<td onclick='onClickPriceClipboard("+targetPriceReal+")'>"+targetPriceReal.toLocaleString()+"</td>";
         rowHtml += "</tr>";
 
       }
