--- a/json/price_cal.html
+++ b/json/price_cal.html
@@ -213,7 +213,7 @@
                 rowHtml += "<th scope='col'>이윤</th>";
                 rowHtml += "<th scope='col'>갯수</th>";
                 rowHtml += "<th scope='col'>판매가</th>";
-                rowHtml += "<th scope='col'>목표가</th>";
+                // rowHtml += "<th scope='col'>목표가</th>";
                 rowHtml += "</tr>";
                 rowHtml += "</thead>";
                 rowHtml += "<tbody>";
@@ -297,7 +297,7 @@
             rowHtml += "<td>"+valProfit.toLocaleString()+"</td>";
             rowHtml += "<td>"+valCount+"</td>";
             rowHtml += "<td onclick='onClickPriceClipboard("+valPrice+")'>"+valPrice.toLocaleString()+"</td>";
-            rowHtml += "<td onclick='onClickPriceClipboard("+targetPriceReal+")'>"+targetPriceReal.toLocaleString()+"</td>";
+            // rowHtml += "<td onclick='onClickPriceClipboard("+targetPriceReal+")'>"+targetPriceReal.toLocaleString()+"</td>";
         rowHtml += "</tr>";
 
       }
