--- a/html/mytube.html
+++ b/html/mytube.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <meta name="description" content="MyTube - High-Quality YouTube Video Downloader. Save your favorite YouTube videos and music in high quality and enjoy them offline without data worries.">
     <meta name="keywords" content="YouTube downloader, video download, offline music, background playback">
-    <meta name="author" content="MyTube">
+    <meta name="author" content="Dev C">
     <meta name="theme-color" content="#DC143C">
 
     <!-- Open Graph / Facebook -->
@@ -1040,7 +1040,7 @@ button:focus-visible {
 
             <div class="footer-bottom">
                 <p class="copyright">
-                    &copy; 2024 MyTube. All rights reserved.
+                    &copy; 2024 MyTube. All rights reserved. | Developed by Dev C
                 </p>
                 <div class="social-links" aria-label="Social media links">
                     <a href="#" class="social-link" aria-label="Facebook">
